objects/Track__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dataloader_Config__c</fullName>
        <externalId>true</externalId>
        <label>Dataloader Config</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Diff_check__c</fullName>
        <label>Diff check</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field123__c</fullName>
        <label>Field123</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field345__c</fullName>
        <label>Field345</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_field__c</fullName>
        <description>evaluación financiera comercial</description>
        <label>Formula field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Newfieldtrack__c</fullName>
        <label>Newfieldtrack</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Formula__c</fullName>
        <formula>Field123__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Track Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_list__c</fullName>
        <label>Track list</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trl_picklist2__c</fullName>
        <label>Trl picklist2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>abc</fullName>
                </value>
                <value>
                    <fullName>ttt</fullName>
                </value>
                <value>
                    <fullName>rrr</fullName>
                </value>
                <value>
                    <fullName>yyy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>llll__c</fullName>
        <label>llll</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trackdate__c</fullName>
        <label>trackdate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trackfield__c</fullName>
        <label>track new</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Track</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dataloader_Config__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>